--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,9 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="refresh" content="0; url=Profile" />
+        <meta http-equiv="refresh" content="0; url=SearchPage" />
     </head>
     <body>
-        <a href="Profile">Problem... click here !!</a>
+        <a href="SearchPage">Problem... click here !!</a>
     </body>
 </html>
